Suppression des devTools

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Senior Menu - Accueil</title>
+    <title>Easy Menu - Accueil</title>
     <link rel="stylesheet" type="text/css" href="./stylesheets/main.css">
     <link href="./stylesheets/fontawesome/css/all.css" rel="stylesheet">
 </head>
