--- a/app/view/index.html
+++ b/app/view/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/style.js"></script>
     <!--<button onclick="window.api.send('toMain', 'some data');">Send data to show alert</button>
   <button onclick="window.api.shutdown();">Shutdown the app</button> -->
@@ -40,8 +41,6 @@
             <span class="bottom-title ">Prendre des notes</span>
         </div>
     </div>
-
-    <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js "></script>
 </body>
 
 </html>
