--- a/app/view/index.html
+++ b/app/view/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="maxSize no-overflow">
 
 <head>
     <title>Easy Menu - Accueil</title>
@@ -7,12 +7,12 @@
     <link href="./stylesheets/fontawesome/css/all.css" rel="stylesheet">
 </head>
 
-<body>
+<body class=".no-overflow maxSize no-overflow">
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/style.js"></script>
     <!--<button onclick="window.api.send('toMain', 'some data');">Send data to show alert</button>
   <button onclick="window.api.shutdown();">Shutdown the app</button> -->
-    <div class="content">
+    <div class="content background">
         <div class="tile" onclick="window.api.openMailClient();" onmouseenter="window.api.send('saySomething', 'Gestion mail')">
             <div class="icon-wrapper">
                 <i class="fas fa-envelope"></i>
