--- a/app/view/internet_access.html
+++ b/app/view/internet_access.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="background">
 
 <head>
     <title>Easy Menu - Site web</title>
@@ -8,15 +8,111 @@
 </head>
 
 <body>
-    test
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/style.js"></script>
+
+
+    <div id="dialogoverlay" onclick="cancelDialog()"></div>
+    <div id="dialogbox">
+        <div>
+            <div id="dialogboxhead"></div>
+            <div id="dialogboxbody"></div>
+            <div id="dialogboxfoot"></div>
+        </div>
+    </div>
+
+
+    <button class="big-button" onclick="promptNewWebSite()">Ajouter un site web</button>
+    <div id="websiteContainer" class="background websiteContainer"></div>
+
+    </div>
+
     <script>
-        window.api.send("getWebsiteMeta", {
-            id: 0,
-            url: "https://www.marmiton.org"
+        var siteList = ["https://www.marmiton.org", "https://fr.wikipedia.org/", "https://www.impots.gouv.fr", "https://stackoverflow.com"]
+        var count = 0
+        siteList.forEach(function(item) {
+            window.api.send("getWebsiteMeta", {
+                id: count,
+                url: item
+            })
+            count += 1
         })
 
+
+        function promptNewWebSite() {
+            var winW = window.innerWidth;
+            var winH = window.innerHeight;
+            var dialogoverlay = document.getElementById('dialogoverlay');
+            var dialogbox = document.getElementById('dialogbox');
+            dialogoverlay.style.display = "block";
+            dialogoverlay.style.height = winH + "px";
+            dialogbox.style.left = (winW / 2) - (550 * .5) + "px";
+            dialogbox.style.top = "100px";
+            dialogbox.style.display = "block";
+            document.getElementById('dialogboxhead').innerHTML = "Saisie du site web";
+            document.getElementById('dialogboxbody').innerHTML = "Adresse du site";
+            document.getElementById('dialogboxbody').innerHTML += '<br><input id="prompt_website">';
+            document.getElementById('dialogboxfoot').innerHTML = '<button onclick="okDialog()">OK</button> <button onclick="cancelDialog()">Annuler</button>';
+        }
+
+        function okDialog() {
+            document.getElementById('dialogbox').style.display = "none";
+            document.getElementById('dialogoverlay').style.display = "none";
+            addWebsite($('#prompt_website').val())
+            $('#prompt_website').val("")
+        }
+
+        function cancelDialog() {
+            document.getElementById('dialogbox').style.display = "none";
+            document.getElementById('dialogoverlay').style.display = "none";
+            $('#prompt_website').val("")
+        }
+
+        function addWebsite(url) {
+            window.api.send("getWebsiteMeta", {
+                id: count,
+                url: url
+            })
+            count += 1
+        }
+
         window.api.receive("webMeta", (data) => {
+            var id = data.id
+            var result = data.result
+            var container = "<div class='website-card' id=website-'" + id + "'>"
+            var title = ""
+            var desc = ""
+            if (result.meta.title !== undefined) {
+                title += "<h3 class='website-title'>" + result.meta.title + "</h3>"
+            } else {
+                title += "<h3 class='website-title'>" + data.url + "</h3>"
+            }
+
+            if (result.meta.description !== undefined || result.og.description !== undefined) {
+                if (result.meta.description !== undefined) {
+                    desc += "<div class='website-desc'>" + result.meta.description + "</div>"
+                } else {
+                    desc += "<div class='website-desc'>" + result.og.description + "</div>"
+                }
+            }
+
+            if (result.og.image !== undefined) {
+                if (result.og.image.startsWith("http")) {
+                    container += "<div class='website-img'><img src='" + result.og.image + "'></div>"
+                } else {
+                    container += "<div class='website-img'><img src='" + data.url + result.og.image + "'></div>"
+                }
+            }
+
+            if (title !== "" && desc !== "") {
+                container += "<div>" + title + desc + "</div>"
+            } else {
+                if (title !== "") {
+                    container += "<div>" + title + "</div>"
+                }
+            }
             console.log(data)
+            $("#websiteContainer").append(container)
         })
     </script>
 </body>
