--- a/app/view/index.html
+++ b/app/view/index.html
@@ -34,11 +34,11 @@
             <span class="bottom-title ">Prendre des notes</span>
         </div>
 
-        <div class="tile" onclick="window.api.openNoteMenu(); " onmouseenter="window.api.send( 'saySomething', 'Prendre des notes') ">
+        <div class="tile" onclick="window.api.openCalcMenu(); " onmouseenter="window.api.send( 'saySomething', 'Prendre des notes') ">
             <div class="icon-wrapper ">
-                <i class="fas fa-clipboard "></i>
+                <i class="fas fa-calculator "></i>
             </div>
-            <span class="bottom-title ">Prendre des notes</span>
+            <span class="bottom-title ">Calculatrice</span>
         </div>
     </div>
 </body>
