--- a/app/view/stylesheets/main.css
+++ b/app/view/stylesheets/main.css
@@ -1,251 +1,304 @@
 :root {
-    --color-main: #00316e;
-    --color-secondary: #165786;
-    --color-gray: #383838;
-    --color-black: #0C0C0C;
-    --color-red: #FF0000;
-    --color-text: white;
+  --color-main: #00316e;
+  --color-secondary: #165786;
+  --color-gray: #383838;
+  --color-black: #0c0c0c;
+  --color-red: #ff0000;
+  --color-text: white;
 }
 
 @font-face {
-    font-family: SegoeUI;
-    src: local("Segoe UI"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2) format("woff2"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff) format("woff"), url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf) format("truetype");
-    font-weight: 400;
+  font-family: SegoeUI;
+  src: local("Segoe UI"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2)
+      format("woff2"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff)
+      format("woff"),
+    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf)
+      format("truetype");
+  font-weight: 400;
 }
 
 html,
 body {
-    height: auto;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: "Segoe UI";
-    color: var(--color-text);
+  height: auto;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: "Segoe UI";
+  color: var(--color-text);
 }
 
-.maxSize {
+.menubar {
+  background-color: var(--color-main);
+  -webkit-app-region: drag;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 40px;
+  display: flex;
+}
+
+.menubar-left{
+    width:50%;
     height: 100%;
-    width: 100%;
+    text-align: left;
 }
 
-.no-overflow {
-    overflow: hidden;
-}
-
-.content {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+.menubar-right{
+    width:50%;
     height: 100%;
-    align-items: center;
-    position: relative;
-}
-
-.background {
-    background-color: var(--color-gray);
-}
-
-.icon-wrapper {
-    width: 200px;
-    height: 200px;
-    position: absolute;
-    left: 50%;
-    font-size: 200px;
-    margin-left: -100px;
-    margin-top: 30px;
-    text-align: center;
-    transition: all 0.5s ease;
-}
-
-.icon-wrapper-selected {
-    width: 200px;
-    height: 200px;
-    position: absolute;
-    left: 50%;
-    font-size: 150px;
-    margin-left: -100px;
-    margin-top: 30px;
-    text-align: center;
-    transition: all 0.5s ease;
-}
-
-.tile {
-    position: relative;
-    background-color: var(--color-secondary);
-    margin: auto;
-    width: 350px;
-    height: 350px;
-    color: var(--color-text);
-    transition: all 0.5s ease;
-    transition: transform .2s;
-}
-
-.tile:hover {
-    transform: scale(1.05);
-}
-
-.bottom-title {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    padding: 0 10px 5px;
-    font-size: 2em;
-    font-weight: 500;
-    overflow: hidden;
-    white-space: nowrap;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis;
-    z-index: 2;
-    transition: all 0.5s ease;
-}
-
-.bottom-title-selected {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    padding: 0 10px 5px;
-    font-size: 2.5em;
-    font-weight: 500;
-    overflow: hidden;
-    white-space: nowrap;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis;
-    z-index: 2;
-    transition: all 0.5s ease;
-}
-
-.websiteContainer {
-    width: 100%;
-    height: auto;
-}
-
-.website-card {
-    border: 1px solid var(--color-text);
-    border-radius: 5px;
-    display: flex;
-    padding: 10px;
-    margin: 10px;
-    min-height: 100px;
-    transition: all 0.2s ease;
-}
-
-.website-card:hover {
-    border: 0;
-    transform: scale(1.02);
-    background-color: var(--color-secondary);
-    border-radius: 0;
-}
-
-.website-title {
-    font-weight: bold;
-}
-
-.website-desc {}
-
-.website-img {
-    margin: auto;
-    margin-right: 10px;
-}
-
-.website-img>img {
-    max-height: 80px;
-}
-
-.big-button {
-    width: 80%;
-    margin: 10px 10% 10px 10%;
-}
-
-button {
-    background-color: var(--color-secondary);
-    color: var(--color-text);
-    font-family: "Segoe UI";
-    border: 0;
-    font-size: 1.5em;
-    font-weight: bold;
-    border-radius: 4px;
-    transition: all .2s ease;
-}
-
-button:hover {
-    background-color: var(--color-red);
-    transform: scale(1.05);
-}
-
-#dialogoverlay {
-    display: none;
-    opacity: .8;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    background: var(--color-black);
-    width: 100%;
-    z-index: 10;
-}
-
-#dialogbox {
-    display: none;
-    position: fixed;
-    background: var(--color-main);
-    border-radius: 7px;
-    width: 550px;
-    z-index: 10;
-}
-
-#dialogbox>div {
-    color: var(--color-text);
-    margin: 8px;
-}
-
-#dialogbox>div>#dialogboxhead {
-    background: var(--color-secondary);
-    font-size: 19px;
-    padding: 10px;
-    color: var(--color-text);
-}
-
-#dialogbox>div>#dialogboxbody {
-    background: var(--color-gray);
-    padding: 20px;
-    color: var(--color-text);
-}
-
-#dialogbox>div>#dialogboxfoot {
-    background: var(--color-secondary);
-    padding: 10px;
     text-align: right;
 }
 
+.mbutton {
+  -webkit-app-region: no-drag;
+  height: 70%;
+  margin:auto;
+  margin-right: 5px;
+}
+
+.webview {
+  position: absolute;
+  top: 40px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.navigateur{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.maxSize {
+  height: 100%;
+  width: 100%;
+}
+
+.no-overflow {
+  overflow: hidden;
+}
+
+.content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  height: 100%;
+  align-items: center;
+  position: relative;
+}
+
+.background {
+  background-color: var(--color-gray);
+}
+
+.icon-wrapper {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  left: 50%;
+  font-size: 200px;
+  margin-left: -100px;
+  margin-top: 30px;
+  text-align: center;
+  transition: all 0.5s ease;
+}
+
+.icon-wrapper-selected {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  left: 50%;
+  font-size: 150px;
+  margin-left: -100px;
+  margin-top: 30px;
+  text-align: center;
+  transition: all 0.5s ease;
+}
+
+.tile {
+  position: relative;
+  background-color: var(--color-secondary);
+  margin: auto;
+  width: 350px;
+  height: 350px;
+  color: var(--color-text);
+  transition: all 0.5s ease;
+  transition: transform 0.2s;
+}
+
+.tile:hover {
+  transform: scale(1.05);
+}
+
+.bottom-title {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 0 10px 5px;
+  font-size: 2em;
+  font-weight: 500;
+  overflow: hidden;
+  white-space: nowrap;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  z-index: 2;
+  transition: all 0.5s ease;
+}
+
+.bottom-title-selected {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 0 10px 5px;
+  font-size: 2.5em;
+  font-weight: 500;
+  overflow: hidden;
+  white-space: nowrap;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  z-index: 2;
+  transition: all 0.5s ease;
+}
+
+.websiteContainer {
+  width: 100%;
+  height: auto;
+}
+
+.website-card {
+  border: 1px solid var(--color-text);
+  border-radius: 5px;
+  display: flex;
+  padding: 10px;
+  margin: 10px;
+  min-height: 100px;
+  transition: all 0.2s ease;
+}
+
+.website-card:hover {
+  border: 0;
+  transform: scale(1.02);
+  background-color: var(--color-secondary);
+  border-radius: 0;
+}
+
+.website-title {
+  font-weight: bold;
+}
+
+.website-desc {
+}
+
+.website-img {
+  margin: auto;
+  margin-right: 10px;
+}
+
+.website-img > img {
+  max-height: 80px;
+}
+
+.big-button {
+  width: 80%;
+  margin: 10px 10% 10px 10%;
+}
+
+button {
+  background-color: var(--color-secondary);
+  color: var(--color-text);
+  font-family: "Segoe UI";
+  border: 0;
+  font-size: 1.5em;
+  font-weight: bold;
+  border-radius: 4px;
+  transition: all 0.2s ease;
+}
+
+button:hover {
+  background-color: var(--color-red);
+  transform: scale(1.05);
+}
+
+#dialogoverlay {
+  display: none;
+  opacity: 0.8;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background: var(--color-black);
+  width: 100%;
+  z-index: 10;
+}
+
+#dialogbox {
+  display: none;
+  position: fixed;
+  background: var(--color-main);
+  border-radius: 7px;
+  width: 550px;
+  z-index: 10;
+}
+
+#dialogbox > div {
+  color: var(--color-text);
+  margin: 8px;
+}
+
+#dialogbox > div > #dialogboxhead {
+  background: var(--color-secondary);
+  font-size: 19px;
+  padding: 10px;
+  color: var(--color-text);
+}
+
+#dialogbox > div > #dialogboxbody {
+  background: var(--color-gray);
+  padding: 20px;
+  color: var(--color-text);
+}
+
+#dialogbox > div > #dialogboxfoot {
+  background: var(--color-secondary);
+  padding: 10px;
+  text-align: right;
+}
+
 @media only screen and (max-width: 1445px) {
-    .content {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        background-color: var(--color-text);
-        height: 100%;
-        align-items: center;
-        position: relative;
-    }
+  .content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: var(--color-text);
+    height: 100%;
+    align-items: center;
+    position: relative;
+  }
 }
 
 @media only screen and (max-width: 1080px) {
-    .content {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        background-color: var(--color-gray);
-        height: 100%;
-        align-items: center;
-        position: relative;
-    }
+  .content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    background-color: var(--color-gray);
+    height: 100%;
+    align-items: center;
+    position: relative;
+  }
 }
 
 @media only screen and (max-width: 720px) {
-    .content {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        background-color: var(--color-gray);
-        height: 100%;
-        align-items: center;
-        position: relative;
-    }
+  .content {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    background-color: var(--color-gray);
+    height: 100%;
+    align-items: center;
+    position: relative;
+  }
 }
