--- a/app/view/stylesheets/main.css
+++ b/app/view/stylesheets/main.css
@@ -92,6 +92,11 @@ body {
   position: relative;
 }
 
+.center-content{
+  display: flex;
+  justify-content: center;
+}
+
 .background {
   background-color: var(--color-gray);
 }
@@ -268,6 +273,18 @@ button:hover {
   background: var(--color-secondary);
   padding: 10px;
   text-align: right;
+}
+
+
+form > div{
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+form > .form-submit-div{
+  justify-content: right !important;
 }
 
 @media only screen and (max-width: 1445px) {
