Ajout du système de theme complet

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -12,7 +12,7 @@
     <script src="./js/style.js"></script>
     <!--<button onclick="window.api.send('toMain', 'some data');">Send data to show alert</button>
   <button onclick="window.api.shutdown();">Shutdown the app</button> -->
-    <div class="content background">
+    <div class="content background content-grid-2 center-content">
         <div class="tile" onclick="window.api.openMailClient();" onmouseenter="window.api.send('saySomething', 'Gestion mail')">
             <div class="icon-wrapper">
                 <i class="fas fa-envelope"></i>
@@ -34,7 +34,7 @@
             <span class="bottom-title ">Prendre des notes</span>
         </div>
 
-        <div class="tile" onclick="window.api.openCalcMenu(); " onmouseenter="window.api.send( 'saySomething', 'Prendre des notes') ">
+        <div class="tile" onclick="window.api.openCalcMenu(); " onmouseenter="window.api.send( 'saySomething', 'Calculatrice') ">
             <div class="icon-wrapper ">
                 <i class="fas fa-calculator "></i>
             </div>
