--- a/app/view/browser.html
+++ b/app/view/browser.html
@@ -8,6 +8,8 @@
 </head>
 
 <body style="height: 100%; width: 100%; overflow: hidden;">
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/style.js"></script>
     <div class="menubar">
         <div class="menubar-left">
             <button class="mbutton" onclick="back();">←</button>
