--- a/app/view/browser.html
+++ b/app/view/browser.html
@@ -10,22 +10,32 @@
 <body style="height: 100%; width: 100%; overflow: hidden;">
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/style.js"></script>
+    <div id='wvc' class='webview'></div>
     <div class="menubar">
         <div class="menubar-left">
-            <button class="mbutton" onclick="back();">←</button>
+            <button class="mbutton">Favoris</button>
+            <button class="mbutton">Historique</button>
+            <button class="mbutton">Historique</button>
+            
+            <!--<button class="mbutton" onclick="back();">←</button>
             <button class="mbutton" onclick="forward();">→</button>
-            <button class="mbutton" onclick="reload();">r</button>
+            <button class="mbutton" onclick="reload();">r</button>-->
         </div>
         <div class="menubar-right">
-            <button class="mbutton" onclick="window.api.minimizeBrowser()">-</button>
+            <!--<button class="mbutton" onclick="window.api.minimizeBrowser()">-</button>
             <button class="mbutton" onclick="window.api.maximizeBrowser()">o</button>
-            <button class="mbutton" onclick="window.api.closeBrowser()">x</button>
+            <button class="mbutton" onclick="window.api.closeBrowser()">x</button>-->
         </div>
     </div>
-    <div id='wvc' class='webview'></div>
 
     <script>
         var lastUrl
+        var trusted = []
+        window.api.getTrusted()
+        window.api.receive("trusted", (data) => {
+            trusted = data
+        })
+
         function getDomainFromUrl(url) {
             return url.replace("https://", "").split("/")[0]
         }
@@ -53,10 +63,20 @@
             lastUrl = webview.getURL()
         })
         webview.addEventListener('did-navigate', (e) => {
-            if(getDomainFromUrl(webview.src)!=getDomainFromUrl(webview.getURL())){
+            if(getDomainFromUrl(webview.src)!=getDomainFromUrl(webview.getURL()) || !trusted.includes(getDomainFromUrl(webview.getURL()))){
                 webview.stop();
-                webview.loadURL(lastUrl);
-            }
+                    if(window.confirm("Redirection vers le site : "+getDomainFromUrl(webview.getURL()))){
+                        if(!trusted.includes(getDomainFromUrl(webview.getURL()))){
+                            if(window.confirm("Voulez vous ajouter "+getDomainFromUrl(webview.getURL())+" au site autorisé")){
+                                window.api.addTrusted(webview.getURL())
+                            }
+                        }
+                        webview.src = getDomainFromUrl(webview.getURL())
+                        webview.loadURL(webview.getURL())
+                    }else{
+                        webview.loadURL(lastUrl);
+                    }
+                }
         })
     </script>
 </body>
