--- a/app/view/browser.html
+++ b/app/view/browser.html
@@ -1,83 +1,146 @@
 <!DOCTYPE html>
 <html style="height: 100%; width: 100%; overflow: hidden;">
-
-<head>
+  <head>
     <title>Easy Menu - Navigateur</title>
-    <link rel="stylesheet" type="text/css" href="./stylesheets/main.css">
-    <link href="./stylesheets/fontawesome/css/all.css" rel="stylesheet">
-</head>
+    <link rel="stylesheet" type="text/css" href="./stylesheets/main.css" />
+    <link href="./stylesheets/fontawesome/css/all.css" rel="stylesheet" />
+    <link href="./stylesheets/micromodalStyle.css" rel="stylesheet" />
 
-<body style="height: 100%; width: 100%; overflow: hidden;">
+    <script src="./js/vex.combined.min.js"></script>
+    <script src="./js/micromodal.min.js"></script>
+    <script>
+      vex.defaultOptions.className = "vex-theme-os";
+    </script>
+    <link rel="stylesheet" href="./stylesheets/vex.css" />
+    <link rel="stylesheet" href="./stylesheets/vex-theme-os.css" />
+  </head>
+
+  <body style="height: 100%; width: 100%; overflow: hidden;">
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/style.js"></script>
-    <div id='wvc' class='webview'></div>
+    <div id="wvc" class="webview"></div>
     <div class="menubar">
-        <div class="menubar-left">
-            <button class="mbutton">Favoris</button>
-            <button class="mbutton">Historique</button>
-            <button class="mbutton">Historique</button>
-        </div>
-        <div class="menubar-right">
-            <button class="mbutton" onclick="back();">←</button>
-            <button class="mbutton" onclick="forward();">→</button>
-            <button class="mbutton" onclick="reload();">r</button>
-            <!--<button class="mbutton" onclick="window.api.minimizeBrowser()">-</button>
+      <div class="menubar-left">
+        <button class="mbutton" onclick='MicroModal.show("modal-fav")'>Favoris</button>
+        <button class="mbutton">Historique</button>
+      </div>
+      <div class="menubar-right">
+        <button class="mbutton" onclick="back();">←</button>
+        <button class="mbutton" onclick="forward();">→</button>
+        <button class="mbutton" onclick="reload();">r</button>
+        <!--<button class="mbutton" onclick="window.api.minimizeBrowser()">-</button>
             <button class="mbutton" onclick="window.api.maximizeBrowser()">o</button>
             <button class="mbutton" onclick="window.api.closeBrowser()">x</button>-->
-        </div>
+      </div>
     </div>
 
     <script>
-        var lastUrl
-        var trusted = []
-        window.api.getTrusted()
-        window.api.receive("trusted", (data) => {
-            trusted = data
-        })
+      var lastUrl;
+      var trusted = [];
+      window.api.getTrusted();
+      window.api.receive("trusted", (data) => {
+        trusted = data;
+      });
 
-        function getDomainFromUrl(url) {
-            return url.replace("https://", "").split("/")[0]
+      function getDomainFromUrl(url) {
+        return url.replace("https://", "").split("/")[0];
+      }
+      var oldDiv = document.getElementById("wvc");
+      document.getElementById(
+        "wvc"
+      ).innerHTML = `<webview id="webview" class="navigateur" src="${window.api.url}"></webview>`;
+      var webview = document.getElementById("webview");
+
+      function back() {
+        if (webview.canGoBack()) {
+          webview.goBack();
         }
-        var oldDiv = document.getElementById('wvc')
-        document.getElementById('wvc').innerHTML = `<webview id="webview" class="navigateur" src="${window.api.url}"></webview>`
-        var webview = document.getElementById('webview')
+      }
 
-        function back() {
-            if (webview.canGoBack()) {
-                webview.goBack()
+      function reload() {
+        webview.reload();
+      }
+
+      function forward() {
+        if (webview.canGoForward()) {
+          webview.goForward();
+        }
+      }
+
+      webview.addEventListener("will-navigate", (e) => {
+        lastUrl = webview.getURL();
+      });
+      webview.addEventListener("did-navigate", (e) => {
+        if (
+          getDomainFromUrl(webview.src) != getDomainFromUrl(webview.getURL()) &&
+          !trusted.includes(getDomainFromUrl(webview.getURL()))
+        ) {
+          webview.stop();
+          if (
+            window.confirm(
+              "Redirection vers le site : " + getDomainFromUrl(webview.getURL())
+            )
+          ) {
+            if (!trusted.includes(getDomainFromUrl(webview.getURL()))) {
+              if (
+                window.confirm(
+                  "Voulez vous ajouter " +
+                    getDomainFromUrl(webview.getURL()) +
+                    " au site autorisé"
+                )
+              ) {
+                window.api.addTrusted(webview.getURL());
+              }
             }
+            webview.src = getDomainFromUrl(webview.getURL());
+            webview.loadURL(webview.getURL());
+          } else {
+            webview.loadURL(lastUrl);
+          }
         }
-
-        function reload() {
-            webview.reload()
-        }
-
-        function forward() {
-            if (webview.canGoForward()) {
-                webview.goForward()
-            }
-        }
-
-        webview.addEventListener('will-navigate', (e) => {
-            lastUrl = webview.getURL()
-        })
-        webview.addEventListener('did-navigate', (e) => {
-            if ((getDomainFromUrl(webview.src) != getDomainFromUrl(webview.getURL())) && !trusted.includes(getDomainFromUrl(webview.getURL()))) {
-                webview.stop();
-                if (window.confirm("Redirection vers le site : " + getDomainFromUrl(webview.getURL()))) {
-                    if (!trusted.includes(getDomainFromUrl(webview.getURL()))) {
-                        if (window.confirm("Voulez vous ajouter " + getDomainFromUrl(webview.getURL()) + " au site autorisé")) {
-                            window.api.addTrusted(webview.getURL())
-                        }
-                    }
-                    webview.src = getDomainFromUrl(webview.getURL())
-                    webview.loadURL(webview.getURL())
-                } else {
-                    webview.loadURL(lastUrl);
-                }
-            }
-        })
+      });
     </script>
-</body>
 
+
+
+
+<div class="modal micromodal-slide" id="modal-fav" aria-hidden="true">
+    <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+      <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+        <header class="modal__header">
+          <h2 class="modal__title" id="modal-1-title">
+            Favoris
+          </h2>
+          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+        </header>
+        <main class="modal__content" id="modal-1-content">
+        <div class="overflow">
+          <ul>
+              <li>Test 1</li>
+              <li>Test 2</li>
+              <li>Test 3</li>
+              <li>Test 4</li>
+              <li>Test 5</li>
+              <li>Test 6</li>
+              <li>Test 7</li>
+              <li>Test 8</li>
+              <li>Test 9</li>
+              <li>Test 10</li>
+              <li>Test 11</li>
+              <li>Test 12</li>
+              <li>Test 13</li>
+              <li>Test 14</li>
+              <li>Test 15</li>
+              <li>Test 16</li>
+              <li>Test 17</li>
+              <li>Test 18</li>
+              <li>Test 19</li>
+              <li>Test 20</li>
+          </ul>
+        </div>
+        </main>
+      </div>
+    </div>
+  </div>
+  </body>
 </html>
