Mise à jour du style

--- a/app/view/browser.html
+++ b/app/view/browser.html
@@ -4,7 +4,6 @@
     <title>Easy Menu - Navigateur</title>
     <link rel="stylesheet" type="text/css" href="./stylesheets/main.css" />
     <link href="./stylesheets/fontawesome/css/all.css" rel="stylesheet" />
-    <link href="./stylesheets/micromodalStyle.css" rel="stylesheet" />
 
     <script src="./js/vex.combined.min.js"></script>
     <script src="./js/micromodal.min.js"></script>
@@ -136,6 +135,86 @@
               <li>Test 18</li>
               <li>Test 19</li>
               <li>Test 20</li>
+              <li>Test 21</li>
+              <li>Test 22</li>
+              <li>Test 23</li>
+              <li>Test 24</li>
+              <li>Test 25</li>
+              <li>Test 26</li>
+              <li>Test 27</li>
+              <li>Test 28</li>
+              <li>Test 29</li>
+              <li>Test 30</li>
+              <li>Test 31</li>
+              <li>Test 32</li>
+              <li>Test 33</li>
+              <li>Test 34</li>
+              <li>Test 35</li>
+              <li>Test 36</li>
+              <li>Test 37</li>
+              <li>Test 38</li>
+              <li>Test 39</li>
+              <li>Test 40</li>
+              <li>Test 41</li>
+              <li>Test 42</li>
+              <li>Test 43</li>
+              <li>Test 44</li>
+              <li>Test 45</li>
+              <li>Test 46</li>
+              <li>Test 47</li>
+              <li>Test 48</li>
+              <li>Test 49</li>
+              <li>Test 50</li>
+              <li>Test 51</li>
+              <li>Test 52</li>
+              <li>Test 53</li>
+              <li>Test 54</li>
+              <li>Test 55</li>
+              <li>Test 56</li>
+              <li>Test 57</li>
+              <li>Test 58</li>
+              <li>Test 59</li>
+              <li>Test 60</li>
+              <li>Test 61</li>
+              <li>Test 62</li>
+              <li>Test 63</li>
+              <li>Test 64</li>
+              <li>Test 65</li>
+              <li>Test 66</li>
+              <li>Test 67</li>
+              <li>Test 68</li>
+              <li>Test 69</li>
+              <li>Test 70</li>
+              <li>Test 71</li>
+              <li>Test 72</li>
+              <li>Test 73</li>
+              <li>Test 74</li>
+              <li>Test 75</li>
+              <li>Test 76</li>
+              <li>Test 77</li>
+              <li>Test 78</li>
+              <li>Test 79</li>
+              <li>Test 80</li>
+              <li>Test 81</li>
+              <li>Test 82</li>
+              <li>Test 83</li>
+              <li>Test 84</li>
+              <li>Test 85</li>
+              <li>Test 86</li>
+              <li>Test 87</li>
+              <li>Test 88</li>
+              <li>Test 89</li>
+              <li>Test 90</li>
+              <li>Test 91</li>
+              <li>Test 92</li>
+              <li>Test 93</li>
+              <li>Test 94</li>
+              <li>Test 95</li>
+              <li>Test 96</li>
+              <li>Test 97</li>
+              <li>Test 98</li>
+              <li>Test 99</li>
+              <li>Test 100</li>
           </ul>
         </div>
         </main>
