Mise à jour du style du navigateur

--- a/app/view/browser.html
+++ b/app/view/browser.html
@@ -25,9 +25,9 @@
       </div>
       <div class="menubar-right">
         <button id="fav-button" class="mbutton" onclick="addWebsite()"><i class="far fa-star"></i></button>
-        <button class="mbutton" onclick="back();">←</button>
-        <button class="mbutton" onclick="forward();">→</button>
-        <button class="mbutton" onclick="reload();">r</button>
+        <button class="mbutton" onclick="back();"><i class="fas fa-arrow-left"></i></button>
+        <button class="mbutton" onclick="forward();"><i class="fas fa-arrow-right"></i></button>
+        <button class="mbutton" onclick="reload();"><i class="fas fa-sync"></i></button>
         <!--<button class="mbutton" onclick="window.api.minimizeBrowser()">-</button>
             <button class="mbutton" onclick="window.api.maximizeBrowser()">o</button>
             <button class="mbutton" onclick="window.api.closeBrowser()">x</button>-->
