--- a/app/view/browser.html
+++ b/app/view/browser.html
@@ -20,6 +20,7 @@
     <div id="wvc" class="webview"></div>
     <div class="menubar">
       <div class="menubar-left">
+        <button class="mbutton" onclick='webview.loadURL(`https://www.google.com`);'><i class="fas fa-home"></i></button>
         <button class="mbutton" onclick='MicroModal.show("modal-fav")'>Favoris</button>
         <button class="mbutton">Historique</button>
       </div>
@@ -28,9 +29,6 @@
         <button class="mbutton" onclick="back();"><i class="fas fa-arrow-left"></i></button>
         <button class="mbutton" onclick="forward();"><i class="fas fa-arrow-right"></i></button>
         <button class="mbutton" onclick="reload();"><i class="fas fa-sync"></i></button>
-        <!--<button class="mbutton" onclick="window.api.minimizeBrowser()">-</button>
-            <button class="mbutton" onclick="window.api.maximizeBrowser()">o</button>
-            <button class="mbutton" onclick="window.api.closeBrowser()">x</button>-->
       </div>
     </div>
 
